# llama-index-start

./: .gitignore  README.md  api.py  app.py  app2.py  build_index.py  llama-index-start.ipynb  pyproject.toml  query_index.py
api/: api.py  test.py
data/: essays.txt
docs/: text1.txt
docs/dummy/: Popup Pro.md
docs/essays/: paul-grahams-essay.txt
docs/extensions/: Back to Top Button.md  Browser Scrollbar.md  Clear Divi Cache.md  Custom Attributes.md  Customizable Project Posts.md  Extended File Format Support.md  Extended Font Type.md  Header & Navigation.md  Hide Admin Bar.md  Maintenance Mode.md  Popup Pro.md  Read More.md  Shortcode Library.md  Widget Library.md  docs_urls.json
docs/histudy/: activate_license.md  auction_course.md  basic_site_setting.md  change-log.md  contact_form.md  elementor_widget.md  extra_settings.md  getting_started.md  global_color_options.md  importing_demo_contents.md  installing_the_theme.md  theme_customization.md  theme_options.md  wordpress_installation.md
scrappers/: histudy-doc-scrapper.py  scrapper.py
storage/: default__vector_store.json  docstore.json  index_store.json
